# hammerstein-tui

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  config.example.toml  install.sh
crates/agent/: Cargo.toml
crates/app-server/: Cargo.toml
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: env_alias.rs  lib.rs  main.rs  metrics.rs  update.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/core/: Cargo.toml
crates/execpolicy/: Cargo.toml
crates/hooks/: Cargo.toml
crates/mcp/: Cargo.toml
crates/protocol/: Cargo.toml
crates/secrets/: Cargo.toml
crates/state/: Cargo.toml
crates/tools/: Cargo.toml
crates/tui/: Cargo.toml  build.rs
crates/tui-core/: Cargo.toml
crates/tui/src/: acp_server.rs  automation_manager.rs  client.rs  config.rs  config_ui.rs  env_alias.rs  features.rs  hooks.rs  localization.rs  logging.rs  main.rs  palette.rs  project_context.rs  prompts.rs  runtime_api.rs  runtime_threads.rs  settings.rs  task_manager.rs
crates/tui/src/client/: chat.rs
crates/tui/src/commands/: config.rs  core.rs  share.rs
crates/tui/src/core/: capacity_memory.rs  engine.rs
crates/tui/src/modules/: text.rs
crates/tui/src/prompts/: base.md
crates/tui/src/sandbox/: mod.rs  policy.rs  seatbelt.rs
crates/tui/tests/: qa_pty.rs
docs/: ARCHITECTURE.md  COMPETITIVE_ANALYSIS.md  CONFIGURATION.md  INSTALL.md  MCP.md  MODES.md  OPERATIONS_RUNBOOK.md  RELEASE_RUNBOOK.md  RUNTIME_API.md
docs/images/: banner_render.py
scripts/: hammerstein-dispatch  hammerstein-tui
scripts/commands/: dispatch.md
(+16 files in other folders)
